--- a/keycloak/compose.yaml
+++ b/keycloak/compose.yaml
@@ -21,7 +21,7 @@ services:
   keycloak:
     depends_on:
       - postgres
-    container_name: local_keycloak
+    container_name: keycloak
     environment:
       # Would be nice to pass these vars from here, and not the "args" section under.
       # ENV KEYCLOAK_ADMIN: admin
@@ -32,8 +32,8 @@ services:
       DB_DATABASE: ${POSTGRESQL_DB}
       DB_USER: ${POSTGRESQL_USER}
       DB_PASSWORD: ${POSTGRESQL_PASS}
-      KEYCLOAK_LOGLEVEL: INFO
-      ROOT_LOGLEVEL: INFO
+      KEYCLOAK_LOGLEVEL: DEBUG
+      ROOT_LOGLEVEL: DEBUG
     #image: mykeycloak:latest
     #image: jboss/keycloak:${KEYCLOAK_VERSION}
     build:
