--- a/devenv/compose.yaml
+++ b/devenv/compose.yaml
@@ -6,8 +6,8 @@ services:
     #image: postgres:13.2
     #image: postgres:14.3
     build:
-      context: .
-      dockerfile: DockerfilePostgres
+      context: postgres
+      dockerfile: Dockerfile
     restart: unless-stopped
     environment:
       POSTGRES_DB: ${POSTGRESQL_DB}
@@ -28,11 +28,11 @@ services:
       # ENV KEYCLOAK_ADMIN: admin
       # ENV KEYCLOAK_ADMIN_PASSWORD: admin
 
-      DB_VENDOR: postgres
-      DB_ADDR: postgres
-      DB_DATABASE: ${POSTGRESQL_DB}
-      DB_USER: ${POSTGRESQL_USER}
-      DB_PASSWORD: ${POSTGRESQL_PASS}
+      # DB_VENDOR: postgres
+      # DB_ADDR: postgres
+      # DB_DATABASE: ${POSTGRESQL_DB}
+      # DB_USER: ${POSTGRESQL_USER}
+      # DB_PASSWORD: ${POSTGRESQL_PASS}
       KC_DB_URL: jdbc:postgresql://postgres:5432/keycloak
       KEYCLOAK_LOGLEVEL: DEBUG
       ROOT_LOGLEVEL: DEBUG
@@ -41,7 +41,7 @@ services:
     #image: mykeycloak:latest
     #image: jboss/keycloak:${KEYCLOAK_VERSION}
     build:
-      context: .
+      context: keycloak
       dockerfile: Dockerfile
       args:
         MY_KEYCLOAK_ADMIN_PASSWORD: "admin1234"
