--- a/devenv/compose.yaml
+++ b/devenv/compose.yaml
@@ -5,6 +5,7 @@ services:
     container_name: postgres
     #image: postgres:13.2
     #image: postgres:14.3
+    # command: -c ssl=on -c ssl_cert_file=/var/lib/postgresql/server.crt -c ssl_key_file=/var/lib/postgresql/server.key
     build:
       context: postgres
       dockerfile: Dockerfile
@@ -13,6 +14,11 @@ services:
       POSTGRES_DB: ${POSTGRESQL_DB}
       POSTGRES_USER: ${POSTGRESQL_USER}
       POSTGRES_PASSWORD: ${POSTGRESQL_PASS}
+
+      # volumes:
+      #   - "$(pwd)/server.crt:/var/lib/postgresql/server.crt:ro"
+      #   - "$(pwd)/server.key:/var/lib/postgresql/server.key:ro" 
+
     # volumes: 
     #   - ./init:/docker-entrypoint-initdb.d
       # - ./docker_postgres_init.sql:/docker-entrypoint-initdb.d/docker_postgres_init.sql
