Enable ssl on postgres

--- a/devenv/postgres/Dockerfile
+++ b/devenv/postgres/Dockerfile
@@ -3,11 +3,19 @@ FROM postgres:13.2 as db
 RUN apt-get update
 RUN apt-get -y install vim
 
-WORKDIR /root
-COPY create_ssl_cert.sh .
+COPY ./server.key /var/lib/postgresql/
+COPY ./server.crt /var/lib/postgresql/
 
+WORKDIR /var/lib/postgresql
+RUN chown postgres:postgres server.crt
+RUN chown postgres:postgres server.key
 
-WORKDIR /app
-#COPY ./myinit.sh /docker-entrypoint-initdb.d/
-#COPY ./init/01.sql /docker-entrypoint-initdb.d/
 COPY ./init/keycloakdb.sql /docker-entrypoint-initdb.d/
+
+COPY /init.sh /docker-entrypoint-initdb.d/
+RUN chmod +x /docker-entrypoint-initdb.d/init.sh
+
+# # NOT WORKING!!!
+# ENTRYPOINT ["/init.sh"] 
+# CMD [ "-c", "ssl=on" , "-c", "ssl_cert_file=/var/lib/postgresql/server.crt", "-c",\
+#      "ssl_key_file=/var/lib/postgresql/server.key"]
