--- a/devenv/debianssh/Dockerfile
+++ b/devenv/debianssh/Dockerfile
@@ -12,8 +12,8 @@ RUN apt-get -y install libpq-dev python-dev-is-python3
 # app
 RUN mkdir -p /app
 WORKDIR /app
-# RUN echo 'Ubuntu with psql' >> /app/index.html
 RUN echo '$mydesc' >> /app/index.html
+COPY dbtest.py /app/
 
 # ssh
 RUN apt-get update
